--- a/bundle/manifests/submariner.io_submariners.yaml
+++ b/bundle/manifests/submariner.io_submariners.yaml
@@ -50,6 +50,8 @@ spec:
                 type: integer
               ceIPSecNATTPort:
                 type: integer
+              ceNatDiscovery:
+                type: integer
               ceIPSecPSK:
                 type: string
               ceIPSecPreferredServer:
