--- a/config/bundle/patches/submariners.crd.config.yaml
+++ b/config/bundle/patches/submariners.crd.config.yaml
@@ -102,6 +102,12 @@
         x-descriptors:
           - urn:alm:descriptor:com.tectonic.ui:number
           - urn:alm:descriptor:com.tectonic.ui:fieldDependency:natEnabled:true
+      - description: The IPsec NAT Discovery port (44490 usually)
+        displayName: IPSec NAT Discovery Port
+        path: ceNatDiscovery
+        x-descriptors:
+        - urn:alm:descriptor:com.tectonic.ui:number
+        - urn:alm:descriptor:com.tectonic.ui:fieldDependency:natEnabled:true
       - description: 'The IPsec IKE port (500 usually)'
         displayName: IPSec IKE Port
         path: ceIPSecIKEPort
